--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,14 @@
 baseURL = "https://note.ytkhs.me"
 DefaultContentLanguage = "ja"
 languageCode = "ja-JP"
-title = "note.ytkhs.me on github.io"
+title = "📘 note.ytkhs.me"
 theme = "anubis"
 publishDir = "public"
 paginate = 10
 enableRobotsTXT = true
+enableEmoji = true
+disableHugoGeneratorInject = true
+hasCJKLanguage = true
 
 [menu]
 
