--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: public
-          cname: note.ytkhs.me
+          cname: text.ytkhs.dev
           enable_jekyll: false
           keep_files: false
           force_orphan: false
