--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://text.ytkhs.dev"
 defaultContentLanguage = "ja"
 languageCode = "ja-JP"
 title = "text.ytkhs.dev"
-theme = "anubis"
+theme = "default"
 publishDir = "public"
 paginate = 10
 enableRobotsTXT = false
@@ -33,7 +33,6 @@ customJS = [
 ]
 dateFormat = '2006-01-02 15:04'
 paginationSinglePost = true
-style = 'light-without-switcher'
 readMore = true
 
 [markup]
