--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main  # Set a branch name to trigger deployment
   workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   deploy:
